# fabrik

./: .dockerignore  .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DAEMON_IMPLEMENTATION.md  DOCKER_BUILD.md  Dockerfile  Dockerfile.fast  GITHUB_DESCRIPTION.md  PLAN.md  README.md  build.rs  cbindgen.toml  cliff.toml  fabrik.toml  fnox.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  docs.yml  fabrik.yml  release.yml
docs/: ACTIVATION_DESIGN.md  c-api.md  cli-reference.md  docker-build-optimization.md  getting-started.md  index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css  posts.data.mts
docs/blog/: index.md
docs/blog/posts/: 2025-01-15-introducing-fabrik.md
docs/build-systems/: README.md  bazel.md  gradle.md  metro.md  nx.md  xcode.md
docs/cache/: eviction.md  p2p.md
docs/cache/build-systems/: bazel.md  nx.md  turborepo.md  xcode.md
docs/cache/recipes/: api-reference.md
docs/cache/recipes/local/: examples.md
docs/cache/recipes/portable/: examples.md  index.md  syntax.md
docs/cache/recipes/remote/: examples.md  index.md  syntax.md
docs/cache/recipes/standard/: annotations.md  examples.md  index.md
docs/cache/scripts/: examples.md  index.md  reference.md
docs/development/: logging.md
docs/guide/: architecture.md  authentication.md  introduction.md
docs/reference/: api.md  c-api.md  cli.md  config-file.md
docs/script-caching/: examples.md  index.md  reference.md
examples/: build.recipe.js  p2p-config.toml
examples/c/: Makefile  example.c
fixtures/bazel/simple/: BUILD
fixtures/bazel/swift/: MODULE.bazel  main.swift
fixtures/build-systems/bazel/simple/: WORKSPACE
fixtures/build-systems/bazel/swift/: BUILD.bazel  MODULE.bazel
fixtures/build-systems/nx/: package.json
fixtures/gradle/: settings.gradle.kts
fixtures/gradle/app/: gradle.properties  init.gradle.kts
fixtures/metro/simple/: .gitignore  README.md  metro.config.js  package.json
fixtures/nx/: README.md  nx.json  package.json
fixtures/recipes/portable/: cache-api-demo.js  dependency-chain.js  error-example.js  file-generator.js  simple-echo.js  spawn-example.js  test-runner.js  typescript-build.js  with-env.js  with-inputs.js
fixtures/scripts/bash/: deploy.sh  output.txt  with-glob.sh  with-inputs.sh
fixtures/tipi/simple/: README.md
fixtures/turborepo/: package.json  turbo.json
include/: fabrik.h
mise/tasks/docs/: deploy
proto/: fabrik.proto  p2p.proto
proto/bazel/: remote_execution.proto
proto/google/api/: annotations.proto  http.proto
proto/google/bytestream/: bytestream.proto
proto/google/rpc/: status.proto
proto/xcode/: keyvalue.proto
src/: cli.rs  cli.rs.bak  cli_utils.rs  config.rs  config_discovery.rs  config_expansion.rs  hot_reload.rs  lib.rs  logging.rs  main.rs  merger.rs  xdg.rs
src/api/: mod.rs  types.rs
src/auth/: mod.rs  provider.rs  token.rs
src/bazel/: action_cache.rs  bytestream.rs  capabilities.rs  cas.rs  mod.rs  rpc_status.rs
src/capi/: mod.rs
src/commands/: activate.rs  auth.rs  bazel.rs  cache.rs  cas.rs  config.rs  daemon.rs  deactivate.rs  doctor.rs  exec.rs  gradle.rs  health.rs  init.rs  kv.rs  mod.rs  nx.rs  p2p.rs  run.rs  server.rs  xcodebuild.rs
src/eviction/: background.rs  mod.rs  policy.rs
src/fabrik_protocol/: mod.rs  service.rs
src/gradle/: mod.rs  server.rs
src/http/: mod.rs  server.rs
src/nx/: mod.rs  server.rs
src/p2p/: auth.rs  client.rs  client.rs.orig  client.rs.rej  consent.rs  discovery.rs  metrics.rs  mod.rs  peer.rs  server.rs
src/recipe/: README.md  annotations.rs  cache_key.rs  dependencies.rs  executor.rs  inputs.rs  metadata.rs  mod.rs  outputs.rs  remote.rs  runtime.rs
src/recipe_portable/: cache.rs  executor.rs  remote.rs  runtime.rs
src/script/: annotations.rs  cache.rs  cache_key.rs  dependencies.rs  executor.rs
src/storage/: cache_dir.rs  filesystem.rs  github_actions.rs  mod.rs
src/xcode/: cas.rs  keyvalue.rs  mod.rs
tests/: bazel_integration_test.rs  github_actions_integration.rs  gradle_acceptance.rs  gradle_acceptance.rs.skip  layer2_server_acceptance.rs  nx_acceptance.rs  nx_acceptance.rs.skip  nx_http_test.rs  oauth2_acceptance.rs  remote_recipe_acceptance.rs  script_cache_acceptance.rs  turborepo_acceptance.rs  xcode_acceptance.rs
tests/common/: mod.rs
website/: .eleventy.js  package.json
website/src/: architecture.njk  docs.njk  index.njk
website/src/_layouts/: base.njk
website/src/assets/: .gitkeep
website/src/css/: style.css
website/src/js/: main.js
(+43 files in other folders)
