[package]
name = "fabrik"
version = "0.6.1"
edition = "2021"
authors = ["Tuist Team"]
description = "Multi-layer build cache infrastructure"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
num_cpus = "1.16"
crossbeam-channel = "0.5"
sha2 = "0.10"
hex = "0.4"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
dirs = "5"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
bytes = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.12"
