[package]
name = "fabrik"
version = "0.9.0"
edition = "2021"
authors = ["Tuist Team"]
description = "Multi-layer build cache infrastructure"
license = "MIT"

[lib]
# Generate both static and dynamic libraries for C FFI
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
rocksdb = { version = "0.22", default-features = false, features = ["snappy"] }
num_cpus = "1.16"
crossbeam-channel = "0.5"
sha2 = "0.10"
hex = "0.4"
kdl = "4.6"
glob = "0.3"
tar = "0.4"
zstd = "0.13"
walkdir = "2"
tempfile = "3"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
dirs = "5"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
bytes = "1"
which = "6"
# Pin home to avoid edition 2024 requirement
home = "=0.5.11"
# Use local schlussel for testing fixes
schlussel = { path = "../schlussel" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "winnt", "handleapi"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
assert_cmd = "2"
predicates = "3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"
cbindgen = "0.27"
